--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello world!
+<HTML>
+
+<HEAD>
+<meta charset="UTF-8">
+
+<TITLE>Не молчите!</TITLE>
+
+</HEAD>
+
+<BODY BGCOLOR="FFFFFF">
+
+<HR>
+
+<h1>Не молчите!</h1>
+
+<h3>Русские войска шестые сутки бомбят жилые кварталы городов Украины, стреляют по мирным людям, сбрасывают бомбы на детские сады, центры переливания крови, роддома и больницы. Это военное преступление и нарушение Венской конвенции, за это ждет трибунал.
+<br>
+<h3>Украинская армия бьется на смерть за свою землю и родных и массово уничтожает нападающих. На сегодня российская сторона потеряла уже больше 9000 человек!!!
+<br>
+<h3>Помогите остановить эту бессмысленную бойню!!! Не отпускайте своих детей и внуков на территорию Украины. Запомните, они едут не на учения. Спасите своих близких пока не поздно.
+<br>
+<h3>Если ваши близкие в последние месяцы отправились на учения и с ними нет связи, скорее всего они участвуют в нападении на Украину. 
+<br>
+<br>
+Матери и жены Украины
+<br>
+</h3>
+
+<CENTER><IMG SRC="image1.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER><IMG SRC="image2.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER><IMG SRC="image3.jpg" ALIGN="BOTTOM"> </CENTER>
+
+<HR>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QXTE7CX25X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QXTE7CX25X');
+</script>
+
+</BODY>
+
+</HTML>
+
+ 
