--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 <br>
 </h3>
 
-<CENTER><IMG SRC="image1.jpg" ALIGN="BOTTOM"> </CENTER>
-<CENTER><IMG SRC="image2.jpg" ALIGN="BOTTOM"> </CENTER>
-<CENTER><IMG SRC="image3.jpg" ALIGN="BOTTOM"> </CENTER>
+<CENTER>
+  <IMG SRC="image1.jpg" ALIGN="BOTTOM"> 
+    <IMG SRC="image2.jpg" ALIGN="BOTTOM"> 
+      <IMG SRC="image3.jpeg" ALIGN="BOTTOM"> 
 
 <HR>
 
